# cmake-install-custom-library-c

./: .gitignore  CMakeLists.txt  README.md  main.c
